<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/theme_third_color" >

            <TextView
                android:id="@+id/txtLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:text="About Us"
                android:textColor="@color/blueBaground"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtLabel"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="26dp"
                android:text="@string/textAbout"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <!--
                 <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="20dp"
                android:text="Copyright (c) 2015" />
            -->

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="21dp"
                 android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Product : "
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <TextView                        
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="walkNpay beta"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView2"
                    android:layout_below="@+id/textView2"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="App version : "
                            android:textStyle="bold"
                        android:textColor="@color/black" />

                    <TextView
         
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/version"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView2"
                    android:layout_below="@+id/textView2"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textView3"
                        android:layout_below="@+id/textView3"
                      android:textStyle="bold"
                        android:text="@string/website"
                        android:textColor="@color/blueBaground" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView2"
                    android:layout_below="@+id/textView2"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textView3"
                        android:layout_below="@+id/website"
                            android:textStyle="bold"
                        android:text="@string/privacy"
                        android:textColor="@color/blueBaground" />
                </TableRow>
            </TableLayout>

            <!--
                 <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/tableLayout"
                android:text="More Information"
             
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="@color/black" />
            -->


            <!--
                 <TextView
                android:id="@+id/support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/website"
                android:text="@string/support" 
                android:textColor="@color/red"/>
            -->

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="120dp"
                android:layout_height="120dp"
              
                android:layout_centerInParent="true"
             
                android:src="@drawable/walknpay2" />

        </RelativeLayout>
     <include
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
  android:visibility="gone"
   layout="@layout/wnp_privacy_policypage" />
    </RelativeLayout>

