<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/scrolView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/theme_third_color" >

                <LinearLayout
                    android:id="@+id/cartlabels"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/theme_light_blue"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="6" >

                    <TextView
                        android:id="@+id/lbltvproductname"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2.5"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/txtitem"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/lbltvproductcount"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="Qty"
                        android:textColor="@color/black"
                        android:imeOptions="actionDone"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/lbltvprice"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/txtAmount"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".5"
                        android:gravity="left|center_horizontal"
                        android:textColor="@color/black"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cartlabels1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cartlabels"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/lblNoProductMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/noproductmessage"
                        android:textColor="@color/black"
                        android:textSize="14dp" />
                </LinearLayout>

                <ListView
                    android:id="@+id/lbllist"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/linear56"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/cartlabels"
                    android:layout_marginTop="5dp"
                    android:cacheColorHint="@color/black_transparent"
                    android:fadeScrollbars="false"
                    android:fadingEdge="none"
                    android:listSelector="@color/black_transparent"
                    android:scrollbars="none" >
                </ListView>

                <View
                    android:id="@+id/linelyt"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_above="@+id/linear56"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#33268CAB" />

                <LinearLayout
                    android:id="@+id/linear56"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center_horizontal|bottom"
                    android:orientation="vertical"
                    android:paddingTop="3dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:weightSum="4" >

                        <TextView
                            android:id="@+id/textlab2"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="right|center_vertical"
                            android:text="@string/txtsubtotal"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/subtotal_amt"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:gravity="right|center_vertical"
                            android:text="@string/txtzero"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:weightSum="4" >

                        <TextView
                            android:id="@+id/taxlabel"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="right|center_vertical"
                            android:text="@string/txttax"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tax_amt"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:gravity="right|center_vertical"
                            android:text="@string/txtzero"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:weightSum="4" >

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="right|center_vertical"
                            android:text="@string/txttotal"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/total_amt"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:gravity="right|center_vertical"
                            android:text="@string/txtzero"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical|center_horizontal" >

                            <FrameLayout
                                android:id="@+id/scanframe"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true" >

                                <ImageView
                                    android:id="@+id/scanner_button"
                                    android:layout_width="80dp"
                                    android:layout_height="90dp"
                                    android:background="@drawable/bluerectangle"
                                    android:paddingBottom="18dp"
                                    android:paddingLeft="18dp"
                                    android:paddingRight="18dp"
                                    android:paddingTop="18dp"
                                    android:src="@drawable/qr_scanner" />

                                <TextView
                                    android:id="@+id/scanner_buttontext"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginTop="5dp"
                                    android:gravity="center|bottom"
                                    android:text="Scan"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />
                            </FrameLayout>
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical|center_horizontal" >

                            <FrameLayout
                                android:id="@+id/checkoutframe"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" >

                                <ImageView
                                    android:id="@+id/checkoutbutton"
                                    android:layout_width="80dp"
                                    android:layout_height="90dp"
                                    android:background="@drawable/bluerectangle"
                                    android:paddingBottom="24dp"
                                    android:paddingLeft="18dp"
                                    android:paddingRight="18dp"
                                    android:paddingTop="18dp"
                                    android:src="@drawable/purse" />

                                <TextView
                                    android:id="@+id/checkoutbuttontext"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginTop="5dp"
                                    android:gravity="center|bottom"
                                    android:text="Pay"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />
                            </FrameLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearblink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="180dp"
                    android:orientation="vertical" >
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <include
        layout="@layout/selectstore"
        android:visibility="gone" />

    <include
        layout="@layout/barcode_entry"
        android:visibility="gone" >
    </include>

</RelativeLayout>